--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/ldn0x7dc/react-native-transformable-image#readme",
   "dependencies": {
-    "react-native-view-transformer": "https://github.com/scribblink/react-native-view-transformer.git"
+    "react-native-view-transformer": "scribblink/react-native-view-transformer"
   }
 }
